# gs-aws-to-gcp-workload-identity

./: LICENSE  README.md  SAMPLES.md  pyproject.toml  requirements.txt
gs_aws_to_gcp_workload_identity/: .env  gcp_token.py  gcp_util.py  main.py
